Fix tab overflow issue.

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@
     text-transform: uppercase;
 }
 
+.page-title h1 {
+    margin-top: 3%;
+}
+
 .page-experience {
     margin-top: 1%;
     margin-bottom: 2%;
@@ -82,9 +86,9 @@
     margin-top: 10px;
 }
 
-.chess img{
-    max-width: 250px;
-    text-align: center;
+.chess img {
+    max-width: 100%;
+
 }
 
 .panels {
